	- fixed compilation with new toolchain
	- added option "hashpath" to specify the location of the MESS hash files
	- added Visual Studio 2010 solution and project files
	- fixes for compilation with Visual Studio 2010 (still not working completely)
	- avoid duplicated runs for sets with bios and ram options
	- added "size" and "crc" for all file entry in output XML for completeness and verification of output data
	- remember the default ram and bios options for future usage

	create_report
	- added option "report_type" (0 = result report / 1 = comparison report)
	- added option "compare_folder" (used for comparison report to compare "xml_folder" against)
	- implemented comparison report (checks "exitcode", "stderr" and "png_crc")
	- fixed crash when invalid configuration was specified
	- added option "print_stdout" to add stdout data to report
	- made it possible to simply use "print_stdout" and "print_stderr"
	- added "stdout_file" and "stderr_file" to default configuration to match old reports
	- always print all available data in normal mode
	- stdout was not printed was not added to report if stderr was missing
	- added support for dipswitches
	- fixed some memory leaks
	- added support for configurations
	- added hard-coded reporting of "called within reset scope by" for now
	- fixed formating of output when no stderr exists

0.70
	- read "mameconfig" version from listxml when available
	- report error in case of unsupported "mameconfig" version
	- fixed return value of create_cfg() in case of success
	- do not process any entries when "xpath_expr" is invalid
	- added a few more XPath error messages
	- fixed memory leak in create_cfg() when creating a .cfg file
	- merged redundant dipswitch/configuration parsing code into parse_listxml_element_cfg()
	- added enum cfg_type for .cfg entry type parameter
	- added option "use_softwarelist" to control usage of software lists
	- renamed the output file postfix for device file entries from "dev" to "sfw" (software)